--- a/Interworld.html
+++ b/Interworld.html
@@ -5,7 +5,7 @@
         <meta name="keywords" content="dark souls 2, ds2, ds2 wiki">
         <meta name="discription" content="Dark Souls 2 Wiki">
 
-        <title>Dark Souls 2 Wiki</title>
+        <title>Dark Souls 2 Wiki Interworld</title>
         <link rel="icon" href="assets\pictures\head_icon.png">
 
         <link rel="stylesheet" href="assets/styles/styles.css">
@@ -18,8 +18,38 @@
                         <option disabled selected>Меню</option>
                         <option value="/Locations.html">Локации</option>
                     </select>
+                    <a href="/SiteInfo.html">
+                        <img class="site_info" src="assets/pictures/info.png">
+                    </a>
                     <br><h1 class="title_text">Междумирье</h1>
                 </div>
+                <h2 class="title_text">Описание</h2>
+                <br>
+                <h3 class="quote">Это Лимб. Связь между Дрангликом и внешним миром. <a class="a_hrefs" href="/Milibeth.html"><sub>Милибет</sub></a></h3>
+                <br><img class="location_images" src="assets/pictures/locations/Interworld.jpg">
+                <br><br><h2 class="title_text">Примечания</h2>
+                <ul>
+                    <br><li class="notes"><h3>В доме, который находится недалеко от начала игры, будут 3 старухи — Хранительницы Огня. С их помощью можно создать персонажа, а в дальнейшем, используя Сосуд Души, перераспределить очки характеристик.</h3></li>
+                    <br><li class="notes"><h3>Если прийти к Хранительницам, имея в инвентаре Королевское кольцо, они дадут вам 6 человеческих фигурок.</h3></li>
+                    <br><li class="notes"><h3>Если убить Стровен и Милибет, из них выпадет 9 человеческих фигурок.</h3></li>
+                    <br><li class="notes"><h3>В локации можно встретить 3 Огров: одного в начале, недалеко от хижины Хранительниц, и двух возле гроба на берегу.</h3></li>
+                        <ol>
+                            <br><li class="notes"><h3>За убийство первого вы получите Каменное кольцо, которое гарантированно выпадет с монстра.</h3></li>
+                            <br><li class="notes"><h3>За убийство двух огров на берегу вы сможете получить половник служанки, поговорив с <a class="a_hrefs" href="/Milibeth.html">Милибет</a>.</h3></li>
+                            <br><li class="notes"><h3>Обоих огров можно расстрелять с уступа, на котором персонажа учат делать удар в спину. Всё, что понадобится — лук с дальностью стрельбы 50 и выше и побольше стрел.</h3></li>
+                        </ol>
+                    <br><li class="notes"><h3>Гроб около двух огров меняет пол персонажа. Такую процедуру вы сможете проделать неограниченное количество раз. После использования гроба все враги на локации восстановятся.</h3></li>
+                    <br><li class="notes"><h3>В локации находится гнездо, в котором проживают невидимые птенцы Дина и Тилло. У них можно обменивать гладкий шелковистый камешек, гладкий шелковистый камень, радужный камень и нечто окаменевшее на различные предметы. Для этого необходимо просто выкинуть их, находясь в гнезде, и сразу подобрать новый предмет. Наиболее редкие вещи, которые можно получить за обмен это: Белое кольцо, позволяющее принять облик фантома, Спиритический трезубец, Демонический молот, а также Старый кнут.</h3></li>
+                    <br><li class="notes"><h3>Сразу же после начала Новой игры + и появления в Междумирье, вас атакуют несколько Сокольников, а на подходе к хижине Хранительниц — 2 фантома-гоблина. Гоблины довольно простые противники — безоружные и медлительные. После отдыха у костра они возрождаются. Ещё одного красного фантома можно обнаружить на пути к ограм возле гроба — он вооружен арбалетом и ждет в самом низу полого дерева.</h3></li>
+                    <br><li class="notes"><h3>Если после начала новой игры стоять на месте некоторое время, то к вам подойдёт кобольд.</h3></li>
+                </ul>
+                <br>
+                <iframe width="330" height="200"
+                    src="https://www.youtube.com/embed/li_9PBrcOcQ"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
     </body>
