--- a/Locations.html
+++ b/Locations.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <!-- https://youtu.be/Rqw8RVPY8DQ -->
     <head>
         <meta charset="utf-8">
         <meta name="keywords" content="dark souls 2, ds2, ds2 wiki">
         <meta name="discription" content="Dark Souls 2 Wiki">
 
-        <title>Dark Souls 2 Wiki</title>
+        <title>Dark Souls 2 Wiki Locations</title>
         <link rel="icon" href="assets\pictures\head_icon.png">
 
         <link rel="stylesheet" href="assets/styles/styles.css">
@@ -13,29 +14,35 @@
     <body>
         <div class="background">
             <div class="background_transparent">
-                <br><h1 class="title_text">Локации</h1>
+                <div>
+                    <a href="/SiteInfo.html">
+                        <img class="site_info" src="assets/pictures/info.png">
+                    </a>
+                    <br><h1 class="title_text">Локации</h1>
+                </div>
+                
 
                 <br><table class="locations">
                     <tr class="locations">
                         <td>
                             <a class="a_hrefs" href="/Interworld.html">
-                                <img class="location_images" src="assets/pictures/locations/Interworld.jpg">
+                                <img class="location_images_small" src="assets/pictures/locations/Interworld.jpg">
                                 <h3 class="location_name">Междумирье</h3>
                             </a>
                             
                         </td>
                         <td>
-                            <img class="location_images" src="assets/pictures/locations/Majula.jpeg">
+                            <img class="location_images_small" src="assets/pictures/locations/Majula.jpeg">
                             <h3 class="location_name">Маджула</h3>
                         </td>
                     </tr>
                     <tr class="locations">
                         <td>
-                            <img class="location_images" src="assets/pictures/locations/Giant_forest.jpg">
+                            <img class="location_images_small" src="assets/pictures/locations/Giant_forest.jpg">
                             <h3 class="location_name">Лес Павших Гигантов</h3>
                         </td>
                         <td>
-                            <img class="location_images" src="assets/pictures/locations/Heid's_flame_tower.jpg">
+                            <img class="location_images_small" src="assets/pictures/locations/Heid's_flame_tower.jpg">
                             <h3 class="location_name">Огненная Башня Хейда</h3>
                         </td>
                     </tr>
