--- a/Interworld.html
+++ b/Interworld.html
@@ -43,13 +43,8 @@
                     <br><li class="notes"><h3>Сразу же после начала Новой игры + и появления в Междумирье, вас атакуют несколько Сокольников, а на подходе к хижине Хранительниц — 2 фантома-гоблина. Гоблины довольно простые противники — безоружные и медлительные. После отдыха у костра они возрождаются. Ещё одного красного фантома можно обнаружить на пути к ограм возле гроба — он вооружен арбалетом и ждет в самом низу полого дерева.</h3></li>
                     <br><li class="notes"><h3>Если после начала новой игры стоять на месте некоторое время, то к вам подойдёт кобольд.</h3></li>
                 </ul>
-                <br>
-                <iframe width="330" height="200"
-                    src="https://www.youtube.com/embed/li_9PBrcOcQ"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
+                <br><br><h2 class="title_text">Видео</h2>
+                <br><iframe class="youtube_videos" width="560" height="315" src="https://www.youtube.com/embed/Rqw8RVPY8DQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </body>
