--- a/Milibeth.html
+++ b/Milibeth.html
@@ -36,6 +36,8 @@
                 <br><li class="notes"><h3>Её дух можно воскресить за 1,000 душ у надгробия перед домом.</h3></li>
                 <br><li class="notes"><h3>После убийства или атаки Милибет, старухи не будут с вами разговаривать и возможность поменять свои характеристики при помощи Сосуда Души будет недоступна. Единственный способ вернуть эту возможность — получить прощение грехов у Кромвеля.</h3></li>
             </ul>
+            <br><br><h2 class="title_text">Видео</h2>
+            <br><iframe class = "youtube_videos" width="560" height="315" src="https://www.youtube.com/embed/Kpf9FHc8V30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </body>
 </html>
