--- a/SiteInfo.html
+++ b/SiteInfo.html
@@ -28,12 +28,12 @@
 
             <br>
             <div>
-                <img class="contacts" src="assets/pictures/telegram.png">
+                <a href = "https://tlgg.ru/Archer1024"><img class="contacts" src="assets/pictures/telegram.png"></a>
                 <h3 class="contacts">Telegram</h3>
             </div>
             <br>
             <div>
-                <img class="contacts" src="assets/pictures/vk.png">
+                <a href="https://vk.com/arthurarch2002"><img class="contacts" src="assets/pictures/vk.png"></a>
                 <h3 class="contacts">VK</h3>
             </div>
 
