--- a/Interworld.html
+++ b/Interworld.html
@@ -44,7 +44,9 @@
                     <br><li class="notes"><h3>Если после начала новой игры стоять на месте некоторое время, то к вам подойдёт кобольд.</h3></li>
                 </ul>
                 <br><br><h2 class="title_text">Видео</h2>
-                <br><iframe class="youtube_videos" width="560" height="315" src="https://www.youtube.com/embed/Rqw8RVPY8DQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <br><iframe class="youtube_videos" width="560" height="315" 
+                src="https://www.youtube.com/embed/Rqw8RVPY8DQ" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </body>
