--- a/SiteInfo.html
+++ b/SiteInfo.html
@@ -5,7 +5,7 @@
         <meta name="keywords" content="dark souls 2, ds2, ds2 wiki">
         <meta name="discription" content="Dark Souls 2 Wiki">
 
-        <title>Dark Souls 2 Wiki Interworld</title>
+        <title>Dark Souls 2 Wiki SiteInfo</title>
         <link rel="icon" href="assets\pictures\head_icon.png">
 
         <link rel="stylesheet" href="assets/styles/styles.css">
