--- a/Milibeth.html
+++ b/Milibeth.html
@@ -5,7 +5,7 @@
         <meta name="keywords" content="dark souls 2, ds2, ds2 wiki">
         <meta name="discription" content="Dark Souls 2 Wiki">
 
-        <title>Dark Souls 2 Wiki Interworld</title>
+        <title>Dark Souls 2 Wiki Milibeth</title>
         <link rel="icon" href="assets\pictures\head_icon.png">
 
         <link rel="stylesheet" href="assets/styles/styles.css">
@@ -37,7 +37,9 @@
                 <br><li class="notes"><h3>После убийства или атаки Милибет, старухи не будут с вами разговаривать и возможность поменять свои характеристики при помощи Сосуда Души будет недоступна. Единственный способ вернуть эту возможность — получить прощение грехов у Кромвеля.</h3></li>
             </ul>
             <br><br><h2 class="title_text">Видео</h2>
-            <br><iframe class = "youtube_videos" width="560" height="315" src="https://www.youtube.com/embed/Kpf9FHc8V30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <br><iframe class = "youtube_videos" width="560" height="315" 
+            src="https://www.youtube.com/embed/Kpf9FHc8V30" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </body>
 </html>
